This is the work version of 11 lab. The same with 10 lab but rewrote with jquery

--- a/Web/index.html
+++ b/Web/index.html
@@ -63,12 +63,10 @@
 
 	</form>
 
-	<script src="JS/10_lab.js"></script>
-	<br>
-	<br>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="JS/11_lab.js"></script>
+	<!--script src="JS/10_lab.js"></111script--><br><br>
 	<script src="JS/9_lab.js"></script>
-
-
 
 	<div class="JS">
 			<form id="arrayForm">
