This is the work version of 12 lab. Added animation with jquery for content after h2 at page

--- a/Web/index.html
+++ b/Web/index.html
@@ -65,6 +65,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="JS/11_lab.js"></script>
+
 	<!--script src="JS/10_lab.js"></111script--><br><br>
 	<script src="JS/9_lab.js"></script>
 
@@ -82,14 +83,14 @@
 		</div>
 
 
-		<div class="slider">
+		<!--div class="slider">
 			<div class="slider-images">
 				<img src="https://static.tildacdn.com/tild6263-6337-4164-a262-633166383764/y4kI0fupF-A.jpg" alt="Первомайский полумарафон" class="slider-image">
 				<img src="https://optim.tildacdn.com/tild3032-3030-4631-b035-333235636666/-/format/webp/f35W6IJKZY0.jpg" alt="Весна" class="slider-image">
 				<img src="https://optim.tildacdn.com/tild3537-3531-4434-b362-653863643931/-/format/webp/noroot.png" alt="Image 3" class="slider-image">
-				<!-- Добавьте сюда другие изображения -->
+				< Добавьте сюда другие изображения>
 			</div>
-		</div>
+		</div-->
 
 		<script>
 			document.addEventListener('DOMContentLoaded', function() {
@@ -186,8 +187,6 @@
 		</div>
 		
 		<h2 id = "results" align = left>Результаты стартов</h2>
-		<img src="" width="" height="" alt="">
-		
 		<div class="table2">
 			<table class="table table-striped" border = 1>
 				<thead>
@@ -214,11 +213,11 @@
 		
 		<h2 id = "trainings" align = left>Тренировки</h2>
 		<p>Беговые тренировки проводятся каждый день в 6:00 и 19:00 <br> по адресу пр. Мира 7г, возле магазина "Triatleta"</p>
-		
-		<div class = "shops">
-			<h2 id = "shops" align = left>Экипировочные магазины</h2>
-			<p>В нашем городе представлено большое количество спортивных магазинов, <br> где вы можете найти подходящую для вас экипировку под конкретный старт.</p>
-			<p>Оставим список на лучшие, по нашему скромному мнению:</p>
+
+	<h2 id = "shops" align = left>Экипировочные магазины</h2>
+	<div class = "shops">
+			<p>В нашем городе представлено большое количество спортивных магазинов, <br> где вы можете найти подходящую для вас экипировку под конкретный старт.<br>
+			Оставим список на лучшие, по нашему скромному мнению:</p>
 			<a class = div-triatleta href="https://triatleta.ru/" target="_blank">Triatleta</a>
 			<a class = div-trial href="https://trial-sport.ru/#" target="_blank">Триал-Спорт</a>
 			<a class = div-stick href="https://stikshop.ru/" target="_blank">Stick</a>
@@ -254,5 +253,7 @@
 		<!-- <div class = footer>
 			<a href = #>Наверх</a>
 		</div> -->
+		<script src="JS/12_lab.js"></script>
+
 	</body>
 </html>
